refactor(reader): simplify sequencing rules using immutable Set.of